--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 Django==4.1
 django-cors-headers==4.3.1
+django-filter==2.4.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 mysqlclient==2.2.4
